--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -19,6 +19,9 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <applicationConfigurable groupId="tools" displayName="Super Simple Injector" id="preferences.Injector" instance="Settings" />
+    <applicationService serviceImplementation="SettingsService"/>
+
+
   </extensions>
 
   <actions>
